--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
             "email": "gohilnavaneet643@gmail.com"
         }
     ],
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "require": {
     "php": ">=7.3.0",
         "twig/twig": "^2.0"
