--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,6 @@
 {
-    "name": "paykun1/checkout",
-    "version": "2.0.5",
-    "type": "package",
+    "name": "vendorr/checkout",
+      "type": "composer-plugin",
     "description": "PayKun Checkout library which can be used to initiate payment",
     "require": {
         "php": ">=5.3.0",
