--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         }
     ],
     "minimum-stability": "dev",
-    "require": {},
+    "require": {        "php": ">=5.3.0",
+        "twig/twig": "^2.0"},
 
     "autoload": {
         "classmap": [
