--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,10 @@
 {
     "name": "paykun1/checkout",
-    "version": "2.0.5",
+   
     "type": "package",
     "description": "PayKun Checkout library which can be used to initiate payment",
     "require": {
-        "php": ">=5.3.0",
-        "twig/twig": "^2.0"
+ 
     },
     "license": "MIT",
     "authors": [
@@ -15,7 +14,7 @@
             "homepage": "https://paykun.com"
         }
     ],
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "prefer-stable": true,
     "autoload": {
         "psr-4": {
