--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,8 @@
     "license": "MIT",
     "authors": [
         {
-            "name": "PayKun Payment Solutions Private Limited",
-            "email": "support@paykun.com",
-            "homepage": "https://paykun.com"
+            "name": "navneet",
+            "email": "gohilnavaneet643@gmail.com"
         }
     ],
     "minimum-stability": "stable",
