--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,7 @@
     "type": "package",
     "description": "PayKun Checkout library which can be used to initiate payment",
     "require": {
-        "php": ">=5.3.0",
-        "twig/twig": "^2.0"
+       
     },
     "license": "MIT",
     "authors": [
@@ -14,7 +13,7 @@
             "email": "gohilnavaneet643@gmail.com"
         }
     ],
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "prefer-stable": true,
     "autoload": {
         "psr-4": {
