--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,7 @@
 {
-    "name": "paykun1/checkout",
-    "version": "2.0.5",
-    "type": "package",
-    "description": "PayKun Checkout library which can be used to initiate payment",
+   "name": "vendor/navneet",
+    "description": "my name is navneet",
+      "type": "composer-plugin",
     "require": {
        
     },
