--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
    "name": "vendor/navneet",
       "version": "2.0.5",
     "description": "my name is navneet",
-      "type": "composer-plugin",
+   "type": "package",
     "require": {
        
     },
