--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,7 @@
 {
-   "name": "vendor/navneet",
-      "version": "2.0.5",
+    "name": "vendor/navneet",
     "description": "my name is navneet",
-   "type": "package",
-    "require": {
-       
-    },
+    "type": "composer-plugin",
     "license": "MIT",
     "authors": [
         {
@@ -14,11 +10,17 @@
         }
     ],
     "minimum-stability": "dev",
-    "prefer-stable": true,
+    "require": {},
+
     "autoload": {
+        "classmap": [
+            "database"
+        ],
         "psr-4": {
-         "App\\": "app/",
+            "App\\": "app/",
             "Devdojo\\Calculator\\": "packages/devdojo/calculator/src"
         }
     }
 }
+
+ 
