--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "vendor/navneet",
     "description": "my name is navneet",
-    "type": "composer-plugin",
+    "type": "package",
     "license": "MIT",
     "authors": [
         {
