--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
         ],
         "psr-4": {
             "App\\": "app/",
-            "Devdojo\\Calculator\\": "packages/devdojo/calculator/src"
+            "Devdojo\\Calculator\\": "/src"
         }
     }
 }
