--- a/composer.json
+++ b/composer.json
@@ -1,27 +1,25 @@
 {
-    "name": "vendor/navneet",
-    "description": "my name is navneet",
-        "version": "2.0.5",
+    "name": "paykun1/checkout",
+    "version": "2.0.5",
     "type": "package",
+    "description": "PayKun Checkout library which can be used to initiate payment",
+    "require": {
+        "php": ">=5.3.0",
+        "twig/twig": "^2.0"
+    },
     "license": "MIT",
     "authors": [
         {
-            "name": "navneet",
-            "email": "gohilnavaneet643@gmail.com"
+            "name": "PayKun Payment Solutions Private Limited",
+            "email": "support@paykun.com",
+            "homepage": "https://paykun.com"
         }
     ],
-    "minimum-stability": "dev",
-    "require": {},
-
+    "minimum-stability": "stable",
+    "prefer-stable": true,
     "autoload": {
-        "classmap": [
-            "database"
-        ],
         "psr-4": {
-            "App\\": "app/",
-            "Devdojo\\Calculator\\": "/src"
+            "Paykun\\Checkout\\": "src/"
         }
     }
 }
-
- 
