--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         ],
         "psr-4": {
      "App\\": "app/",
-            "Devdojo\\Calculator\\": "src/"
+        "Devdojo\\Calculator\\": "packages/devdojo/calculator/src"
         }
     }
 }
